--- a/src/searchable.scss
+++ b/src/searchable.scss
@@ -2,19 +2,8 @@
   margin-top: 25px;
   position: relative;
 
-  &[data-btn-pos='top left']::before {
-    content: attr(data-icon, '🔎');
-    cursor: pointer;
-    height: 25px;
-    left: 0;
-    position: absolute;
-    text-align: center;
-    top: -25px;
-    width: 25px;
-  }
-
-  &[data-btn-pos='top right']::before {
-    content: attr(data-icon, '🔎');
+  &::before {
+    content: attr(data-sb-icon, '🔎');
     cursor: pointer;
     height: 25px;
     position: absolute;
@@ -24,15 +13,30 @@
     width: 25px;
   }
 
+  &.sb-left::before {
+    left: 0;
+    right: auto;
+  }
+
   &:hover::before {
     transform: scale(1.1);
+  }
+
+  tbody {
+    &::before {
+      content: attr(data-sb-empty, '🔍 ¯\\_(ツ)_/¯');
+      display: table-row;
+      opacity: 0.7;
+      position: absolute;
+      text-align: center;
+      width: 100%;
+      z-index: -1;
+    }
   }
 
   thead {
     input[type='search'] {
       box-sizing: border-box;
-      font-size: 1em;
-      padding: 5px;
       width: 100%;
     }
   }
